--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "first-block",
+	"name": "gutenberg-slider",
 	"version": "0.1.0",
-	"description": "Example block written with ESNext standard and JSX support – build step required.",
-	"author": "The WordPress Contributors",
+	"description": "A simple slider block",
+	"author": "László Madarász",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
